--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ title: JackGruber
 # List of links in the navigation bar
 navbar-links:
   Blog: ""
-  About Me: "site/aboutme"
-nav-search: "site/search"
+  About Me: "pages/aboutme"
+nav-search: "pages/search"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
