--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-
+  github: jackgruber
 # Select which share links to show in posts
 #share-links-active:
 #  twitter: true
