--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,9 @@ title: JackGruber
 
 # List of links in the navigation bar
 navbar-links:
-  Blog: ""
+  Blog:
+    - Posts: "blog"
+    - Tags: "tags"
   About Me: "pages/aboutme"
 nav-search: "pages/search"
 
@@ -137,6 +139,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
+paginate_path: "/blog/page:num/"
 
 kramdown:
   input: GFM
