--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ social-network-links:
   xing: Alexander_Gruber19
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-#  instagram: deanat78
+  instagram: gruberjack
 #  youtube: user/deanat78
 #  spotify: yourname
 #  telephone: +14159998888
