--- a/_config.yml
+++ b/_config.yml
@@ -42,23 +42,22 @@ round-avatar: true
 # then specify the following parameter
 #title-img: /path/to/image
 
-
 # --- Footer options --- #
 
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-#  email: "someone@example.com"
-#  facebook: deanattali
+  #  email: "someone@example.com"
+  #  facebook: deanattali
   github: jackgruber
   twitter: gruberjack
   rss: true
-#  reddit: yourname
+  #  reddit: yourname
   linkedin: gruberalexander
   xing: Alexander_Gruber19
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
+  #  stackoverflow: "3943160/daattali"
+  #  snapchat: deanat78
   instagram: gruberjack
 #  youtube: user/deanat78
 #  spotify: yourname
@@ -83,7 +82,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -122,7 +121,6 @@ footer-link-col: "#404040"
 # For any extra customization, you can include additional CSS files in every page on your site
 #site-css:
 #  - "/assets/css/custom-styles.css"
-
 
 # --- Web Statistics Section --- #
 
@@ -175,7 +173,6 @@ footer-link-col: "#404040"
 #    siteKey  : # Use your own site key, you need to apply for one on Google
 #    secret   : # ENCRYPT your password by going to https://staticman3.herokuapp.com/v3/encrypt/<your-site-secret>
 
-
 # --- Misc --- #
 
 # Character used to separate site title and description in HTML document title
@@ -187,7 +184,6 @@ date_format: "%B %-d, %Y"
 
 # Facebook App ID
 #fb_app_id: ""
-
 
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
@@ -204,17 +200,15 @@ kramdown:
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
+      comments: true # add comments to all blog posts
       social-share: false # add social media sharing buttons to all blog posts
       readtime: false # add estimated reading time on all blog posts
-  -
-    scope:
+  - scope:
       path: "" # all files
     values:
       layout: "page"
@@ -234,7 +228,6 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
