--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: JackGruber
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: My personal Website
 
 # Your name to show in the footer
 author: Gruber Alexander
@@ -192,7 +192,7 @@ timezone: "Europe/Berlin"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
-paginate: 5
+paginate: 10
 paginate_path: "/blog/page:num/"
 
 kramdown:
