--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "4000:4000/tcp"
     volumes:
-      - C:/git/meine/jackgruber.github.io:/srv/jekyll
+      - ./:/srv/jekyll
     environment:
       - JEKYLL_ENV=docker
     command: jekyll serve --config  _config.yml,_config.docker.yml
