--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
     - Posts: "blog"
     - Tags: "tags"
   About Me: "pages/aboutme"
-nav-search: "pages/search"
+  Search: "pages/search"
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
