Add: Summoners, Saga, Fleet

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ navbar-links:
     - Warhammer 40.000: "pages/tabletop/40k"
     - Infinity: "pages/tabletop/Infinity"
     - Battltech: "pages/tabletop/battletech"
+    - Saga: "pages/tabletop/saga"
+    - Summoners: "pages/tabletop/summoners"
+    - Various: "pages/tabletop/various"
   About Me: "pages/aboutme"
   Search: "pages/search"
 ################
