Remove: Twitter and Instagram

--- a/_config.yml
+++ b/_config.yml
@@ -58,14 +58,14 @@ social-network-links:
   #email: "...."
   #  facebook: deanattali
   github: jackgruber
-  twitter: gruberjack
+  #twitter: gruberjack
   rss: true
   #  reddit: yourname
   linkedin: gruberalexander
   xing: Alexander_Gruber19
   #  stackoverflow: "3943160/daattali"
   #  snapchat: deanat78
-  instagram: gruberjack
+  #instagram: gruberjack
 #  youtube: user/deanat78
 #  spotify: yourname
 #  telephone: +14159998888
